ICE-7860 / ICE-7861 - Fixes for nested scrollable table alignment.

--- a/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/icefaces3/trunk/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -44,7 +44,7 @@
     padding:4px 10px;
 }
 
-.ui-datatable .ui-datatable-data td,.ui-datatable .ui-datatable-data-empty td {
+.ui-datatable tbody.ui-datatable-data > tr > td,.ui-datatable tbody.ui-datatable-data-empty > tr > td {
     border-color:inherit;
     border-style:solid;
     border-width:1px;
